--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,30 @@
 body{
     display: grid;
-    grid-template-areas: 'nav'
+    grid-template-areas: 'navbar'
                          'banner'
                          'main'
                          'section'
                          'footer';
-    grid-template-columns: 100w;
-                        }
+    grid-template-columns: 100vw;
+    margin: 0;
+}
+nav{
+    background-color:#d3bbde;
+    display: flex;
+    justify-content: space-between;
+    grid-area: 'navbar'
+}
+nav div{
+    display: flex;
+    flex-direction: column;
+    height: 30px;
+    justify-content: space-between;
+}
+nav div span{
+    background-color: black;
+    height: 5px;
+    width: 30px;
+}
+nav img{
+    width: 35px;
+}
