--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,14 @@ nav{
     justify-content: space-between;
     grid-area: 'navbar'
 }
+main{
+    grid-area:main;
+}
+main h1, main p{
+    text-align:center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+}
 nav div{
     display: flex;
     flex-direction: column;
@@ -33,4 +41,29 @@ nav div span{
 }
 nav img{
     width: 35px;
+}
+section{
+    align-items:center;
+    display: flex;
+    flex-direction: column;
+    grid-area: section;
+}
+
+.funcionarios img{
+    width: 100px;
+}
+
+.funcionarios{
+    display: flex;
+}
+
+@media(min-width:768px){
+
+    section .funcionarios{
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        width: 99.5vw;
+        align-items: flex-end;
+    }
 }
